k8s/homepage/resources/homepage.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  annotations:
    reloader.stakater.com/auto: 'true'
spec:
  replicas: 1
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      serviceAccountName: service-account
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      volumes:
        - name: config-map
          configMap:
            name: config
        - name: config
          emptyDir: {}
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:v0.10.7@sha256:b261c981a866a0e287205394bf365bd8cdb9152469a85ec569d7bfcd7812cf14
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          resources:
            requests:
              memory: 200M
            limits:
              memory: 400M
          volumeMounts:
            - name: config
              mountPath: /app/config
            - name: config-map
              mountPath: /app/config/settings.yaml
              subPath: settings.yml
            - name: config-map
              mountPath: /app/config/services.yaml
              subPath: services.yml
            - name: config-map
              mountPath: /app/config/bookmarks.yaml
              subPath: bookmarks.yml
            - name: config-map
              mountPath: /app/config/widgets.yaml
              subPath: widgets.yml
            - name: config-map
              mountPath: /app/config/kubernetes.yaml
              subPath: kubernetes.yml
          ports:
            - name: web
              containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
